perso: ajout du gitignore + précisions dans le README + ajout résumés Don Quichotte

--- a/DonQuichotte.tex
+++ b/DonQuichotte.tex
@@ -74,16 +74,103 @@
 
 %% won't compile if at least one of these three next line is deleted
 %% but you can add nothing between the brackets to leave it blank
-\author{}
-\date{}
-\title{}
+\author{Amnézic}
+\date{Avril 2024}
+\title{Résumé DonQuichotte}
 
 \begin{document}
 \maketitle
 \newpage
 %% not necessary
 %% compile twice the first time to display table of content
-\tableofcontents
-\newpage
+\section{Résumé}
+Résumé par chapitre :
+\begin{enumerate}
+    \item (Partie 1) Don Quichotte est un paysan qui veut devenir chevalier après avoir lu des contes de chevalerie. Il nomme son cheval Rossinante.
+    \item Don Quichotte se ridiculise dans une auberge
+    \item l'aubergiste accepte malgré tout d'adouber Don Quichotte et ce dernier choisi une de ses deux filles pour devenir sa dulcinée.
+    \item Don Quichotte provoque des marchands ambulants mais perd lamentablement.
+    \item Don Quichotte est ramené de force chez lui et il est décidé que tous ses livres de chevalerie doivent être brûlés.
+    \item Les amis de Don Quichotte trient les livres à garder et ceux à brûler.
+    \item Don Quichotte est accompagné de son voisin laboureur Sancho, devenu écuyer à qui il promet de gouverner sur une région bientôt conquise.
+    \item Don Quichotte part à l'aventure avec Sancho. Il rencontre sur le chemin un groupe composé de deux religieux (dont un qu'il tue) et de biscayens accompagnant une dame en calèche. Il se bat en duel contre un des biscayens, croyant libérer la dame qu'il imagine captive. 
+    \item (Partie 2) Pas de résumé
+    \item Sancho veut se retirer de l'aventure mais Don Quichotte le convaint de rester. Ils cherchent, sans succès, un endroit où loger pour la nuit.
+    \item Don Quichotte et Sancho passe la nuit chez des chevriers.
+    \item On raconte à Don Quichotte qu'il y a une fille d'un riche paysan qui est très belle et qui a de nombreux prétendants, mais qu'elle les refuse tous, préférant devenir bergère.
+    \item Pas de résumé
+    \item Pas de résumé
+    \item (Partie 3) Pas de résumé
+    \item Pas de résumé
+    \item Pas de résumé
+    \item Pas de résumé
+    \item Pas de résumé
+    \item Pas de résumé
+    \item Pas de résumé
+    \item Pas de résumé
+    \item Pas de résumé
+    \item Pas de résumé
+    \item Pas de résumé
+    \item Pas de résumé
+    \item Pas de résumé
+    \item (Partie 4) Pas de résumé
+    \item Pas de résumé
+    \item Pas de résumé
+    \item Pas de résumé
+    \item Pas de résumé
+    \item Pas de résumé
+    \item Pas de résumé
+    \item Pas de résumé
+    \item Pas de résumé
+    \item Pas de résumé
+    \item Pas de résumé
+    \item Pas de résumé
+    \item Pas de résumé
+    \item Pas de résumé
+    \item Pas de résumé
+    \item Pas de résumé
+    \item Pas de résumé
+    \item Pas de résumé
+    \item Pas de résumé
+    \item Pas de résumé
+    \item Pas de résumé
+    \item Pas de résumé
+    \item Pas de résumé
+    \item Pas de résumé
+    \item Pas de résumé
+\end{enumerate}
+
+
+\section{Nouveaux mots de vocabulaire}
+\begin{itemize}
+    \item affable: très accueillant et aimable
+    \item billevesée: stupidité, propos sans queue ni tête
+    \item bisaïeul(s): arrière grand-parent
+    \item cabasset: casque porté à la Renaissance
+    \item châtreur: celui qui castre
+    \item chaume: paille servant autrefois à recouvrir les toitures des chaumières
+    \item consomption: amaigrissement progressif dû à la maladie ou à la grande vieillesse
+    \item dévoyé: qui ne respecte pas les normes
+    \item dol: technique de manipulation de quelqu'un pour signer un contrat (dans le domaine du droit)
+    \item églogues: petit poème pastoral
+    \item étique : décharné, d'une maigreur extrême
+    \item facéties: farce, plaisanterie burlesque
+    \item faucre: crochet fixé sur l'armure pour poser la lance
+    \item galimatias: discours embrouillé, confus
+    \item gargautier: mauvais cuisinier
+    \item heaume: casque porté au Moyen-Age
+    \item hidalgo: noble espagnol
+    \item inimitié(s): sentiment d'hostilité
+    \item licou: ce qu'on met autour du cou des animaux
+    \item morion: casque léger porté par les fantassins au XVIème siècle
+    \item onguent: pommade
+    \item oraison: prière
+    \item ravaudeur: celui qui raccommode à l'aiguille
+    \item rondache: bouclier porté durant la Renaissance
+    \item rosse: dur et sévère; (f) mauvais cheval
+    \item roussin: cheval puissant qui était employé par les chevaliers en armures; policier en argot
+    \item soc: pièce de la charrue qui creuse le sillon
+    \item vétille: chose insignifiante
+\end{itemize}
 
 \end{document}
