perso:Don Quichotte: ajout résumé chapitre 13

--- a/DonQuichotte.tex
+++ b/DonQuichotte.tex
@@ -94,11 +94,11 @@ Résumé par chapitre :
     \item Les amis de Don Quichotte trient les livres à garder et ceux à brûler.
     \item Don Quichotte est accompagné de son voisin laboureur Sancho, devenu écuyer à qui il promet de gouverner sur une région bientôt conquise.
     \item Don Quichotte part à l'aventure avec Sancho. Il rencontre sur le chemin un groupe composé de deux religieux (dont un qu'il tue) et de biscayens accompagnant une dame en calèche. Il se bat en duel contre un des biscayens, croyant libérer la dame qu'il imagine captive. 
-    \item (Partie 2) Pas de résumé
+    \item (Partie 2) L'auteur raconte la difficulté qu'il a eu à retrouver la partie manquante du récit. Don Quichotte finit par gagner le duel, bien qu'il ait reçu un coup à la tête. Il décide de ne pas tuer son adversaire, en échange de quoi, les autres personnes qui étaient présentes doivent aller voir la dame de Tobosso (dulcinée de Don Quichotte).
     \item Sancho veut se retirer de l'aventure mais Don Quichotte le convaint de rester. Ils cherchent, sans succès, un endroit où loger pour la nuit.
     \item Don Quichotte et Sancho passe la nuit chez des chevriers.
-    \item On raconte à Don Quichotte qu'il y a une fille d'un riche paysan qui est très belle et qui a de nombreux prétendants, mais qu'elle les refuse tous, préférant devenir bergère.
-    \item Pas de résumé
+    \item On raconte à Don Quichotte qu'il y a une fille, nommée Marcela, d'un riche paysan qui est très belle et qui a de nombreux prétendants, mais qu'elle les refuse tous, préférant devenir bergère.
+    \item Don Quichotte, Sancho et les amis de Grisimoto se rendent à l'enterrement de ce dernier. En chemin, ils rencontrent des chevaliers qui vont aussi à l'enterrement. Tout le monde se rend compte, sauf Sancho, que Don Quichotte est fou.
     \item Pas de résumé
     \item (Partie 3) Pas de résumé
     \item Pas de résumé
