--- a/DonQuichotte.tex
+++ b/DonQuichotte.tex
@@ -99,7 +99,7 @@ Résumé par chapitre :
     \item Don Quichotte et Sancho passe la nuit chez des chevriers.
     \item On raconte à Don Quichotte qu'il y a une fille, nommée Marcela, d'un riche paysan qui est très belle et qui a de nombreux prétendants, mais qu'elle les refuse tous, préférant devenir bergère.
     \item Don Quichotte, Sancho et les amis de Grisimoto se rendent à l'enterrement de ce dernier. En chemin, ils rencontrent des chevaliers qui vont aussi à l'enterrement. Tout le monde se rend compte, sauf Sancho, que Don Quichotte est fou.
-    \item Pas de résumé
+    \item On lit les poèmes de Grisimoto et Marcela arrive pour se défendre de toutes ces accusations à son encontre.
     \item (Partie 3) Pas de résumé
     \item Pas de résumé
     \item Pas de résumé
