--- a/DonQuichotte.tex
+++ b/DonQuichotte.tex
@@ -100,7 +100,7 @@ Résumé par chapitre :
     \item On raconte à Don Quichotte qu'il y a une fille, nommée Marcela, d'un riche paysan qui est très belle et qui a de nombreux prétendants, mais qu'elle les refuse tous, préférant devenir bergère.
     \item Don Quichotte, Sancho et les amis de Grisimoto se rendent à l'enterrement de ce dernier. En chemin, ils rencontrent des chevaliers qui vont aussi à l'enterrement. Tout le monde se rend compte, sauf Sancho, que Don Quichotte est fou.
     \item On lit les poèmes de Grisimoto et Marcela arrive pour se défendre de toutes ces accusations à son encontre.
-    \item (Partie 3) Pas de résumé
+    \item (Partie 3) Partis dans le bois où ils ont vu Marcella rentrer, Don Quichotte et Sancho se font battre par un groupe de bergers passant sur leur chemin. Ils rentrent dans un chateau/auberge pour y passer la nuit.
     \item Pas de résumé
     \item Pas de résumé
     \item Pas de résumé
