perso:Don Quichotte: rajout résumés ch 16 à 19 inclus

--- a/DonQuichotte.tex
+++ b/DonQuichotte.tex
@@ -101,10 +101,10 @@ Résumé par chapitre :
     \item Don Quichotte, Sancho et les amis de Grisimoto se rendent à l'enterrement de ce dernier. En chemin, ils rencontrent des chevaliers qui vont aussi à l'enterrement. Tout le monde se rend compte, sauf Sancho, que Don Quichotte est fou.
     \item On lit les poèmes de Grisimoto et Marcela arrive pour se défendre de toutes ces accusations à son encontre.
     \item (Partie 3) Partis dans le bois où ils ont vu Marcella rentrer, Don Quichotte et Sancho se font battre par un groupe de bergers passant sur leur chemin. Ils rentrent dans un chateau/auberge pour y passer la nuit.
-    \item Pas de résumé
-    \item Pas de résumé
-    \item Pas de résumé
-    \item Pas de résumé
+    \item Don Quichotte et Sancho passent la nuit dans une auberge. Don Quichotte a failli coucher avec la prostitué de l'auberge.
+    \item Don Quichotte et Sancho mettent la pagaille dans l'auberge. Don Quichotte refuse de payer et Sancho en fait les frais.
+    \item Don Quichotte et Sancho quittent l'auberge. Fon Quichotte se bat contre des brebis qu'il prend pour deux armées et se fait littéralement casser les dents par les bergers.
+    \item Don Quichotte gagne un combat contre un groupe de religieux de passage dans le coin.
     \item Pas de résumé
     \item Pas de résumé
     \item Pas de résumé
