Ajout des résumés du chapitre 20 au chapitre 26 inclus

--- a/DonQuichotte.tex
+++ b/DonQuichotte.tex
@@ -105,13 +105,13 @@ Résumé par chapitre :
     \item Don Quichotte et Sancho mettent la pagaille dans l'auberge. Don Quichotte refuse de payer et Sancho en fait les frais.
     \item Don Quichotte et Sancho quittent l'auberge. Fon Quichotte se bat contre des brebis qu'il prend pour deux armées et se fait littéralement casser les dents par les bergers.
     \item Don Quichotte gagne un combat contre un groupe de religieux de passage dans le coin.
-    \item Pas de résumé
-    \item Pas de résumé
-    \item Pas de résumé
-    \item Pas de résumé
-    \item Pas de résumé
-    \item Pas de résumé
-    \item Pas de résumé
+    \item Don Quichotte et Sancho repartent à l'aventure et s'arrêtent la nuit devant ce qui semble être un grand danger que Don Quichotte est résolu à combattre. Grâce à une ruse de Sancho, ils attendent le lendemain matin et se rendent compte que ce n'était que des foulards. Don Quichotte rappelle à Sancho sa place d'écuyer.
+    \item Ils parlent de chevalerie.
+    \item Ils croisent une chaîne de galériens. Après avoir entendu l'histoire de chacun d'eux, Don Quichotte les libère et leur demande en échange d'aller voir la Dulcinée. Ces derniers refusent et s'enfuient après lapidé Don Quichotte.
+    \item Après s'être fait voler l'âne de Sancho par le galérien le plus fort de ceux qui ont étaient libérés plus tôt, ils partent à la recherche du propriétaire d'un sac trouvé parterre. Ils croisent un homme qui leur explique que lui et 3 autres personnes ont trouvé le propriétaire du sac mais qu'il vit dans cette forêt depuis plusieurs et qu'il est devenu fou. Ils finissent par le retrouver.
+    \item Le fou raconte son histoire. Ce dernier et Don Quichotte se battent. Le fou fuit dans la forêt.
+    \item Don Quichotte parle de romans de chevalerie à Sancho. Ce dernier quitte l'aventure mais Don Quichotte lui demande de remettre une lettre à sa Dulcinée sur le chemin.
+    \item Sancho est sur le chemin pour rentrer chez lui. Il s'arrête dans l'auberge que Don Quichotte prenait pour une château. Il y croise le barbier et le curé amis de Don Quichotte. Il leur raconte les aventures et se rend compte qu'il a oublié la lettre pour Dulcinée ainsi que celle qui indiquait la somme que devait Don Quichotte à Sancho.
     \item Pas de résumé
     \item (Partie 4) Pas de résumé
     \item Pas de résumé
@@ -150,6 +150,7 @@ Résumé par chapitre :
     \item châtreur: celui qui castre
     \item chaume: paille servant autrefois à recouvrir les toitures des chaumières
     \item consomption: amaigrissement progressif dû à la maladie ou à la grande vieillesse
+    \item déjeté : gauchi, courbé par rapport à sa position habituelle
     \item dévoyé: qui ne respecte pas les normes
     \item dol: technique de manipulation de quelqu'un pour signer un contrat (dans le domaine du droit)
     \item églogues: petit poème pastoral
@@ -162,6 +163,7 @@ Résumé par chapitre :
     \item hidalgo: noble espagnol
     \item inimitié(s): sentiment d'hostilité
     \item licou: ce qu'on met autour du cou des animaux
+    \item missive : lettre (le texte)
     \item morion: casque léger porté par les fantassins au XVIème siècle
     \item onguent: pommade
     \item oraison: prière
